--- a/poetry_example_project/fastapi_microservice/Dockerfile
+++ b/poetry_example_project/fastapi_microservice/Dockerfile
@@ -1,17 +1,19 @@
 FROM python:3.11-slim
 
-WORKDIR /app
+WORKDIR /code
 
-# Copy the project files
-COPY . .
+# Copy the project files for depenedency and env management
 
-#COPY pyproject.toml poetry.lock /app/
-
+COPY pyproject.toml poetry.lock config.ini /code/
+# Install poetry and project depenedencies with poetry
 RUN pip install poetry
+
 RUN poetry install 
 
-COPY . /app
+# Copy app folder into the working directory with app folder similar to our project structure
+COPY /app /code/app
 
+# expose port to access the api
 EXPOSE 8000
 
 CMD ["poetry", "run", "uvicorn", "app.main:app" ,"--host", "0.0.0.0", "--port", "8000","--workers","4" ]
